# ommnia-sso-cli

./: .gitignore  README.md  pyproject.toml  test
ommnia_sso_cli/: main.py  shared.py  state.py
ommnia_sso_cli/apps/: groups.py  login.py  users.py
ommnia_sso_cli/data/models/: __init__.py  group.py  user.py
ommnia_sso_cli/data/repositories/: config_repository.py  groups_repository.py  login_repository.py  users_repository.py
ommnia_sso_cli/functions/: __init__.py  create_login_session.py  regular_login.py
