[tool.poetry]
name = "ommnia-sso-cli"
version = "0.1.0"
description = "The CLI that serves as an admin to the Ommnia SSO"
authors = ["Luke A.C.A. Rieff - Ommnia Systems <l.rieff@ommnia-systems.nl>"]
readme = "README.md"

[tool.poetry.scripts]
admin = "ommnia_sso_cli.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}
pydantic = "^2.8.2"
rich = "^13.7.1"
ommnia-permission-tree = {git = "https://github.com/ommnia-lrieff/ommnia_permission_tree.git", tag="v1.0.2"}
ommnia-sso-tokens = {git = "https://github.com/ommnia-lrieff/ommnia_sso_tokens.git", tag="v1.0.3"}
tomlkit = "^0.13.0"
aiohttp = "^3.10.1"
gql = "^3.5.0"
cryptography = "^43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
